# nextrag

./: .gitignore  README.md
backend/: .env.example  CHANGELOG.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-test.txt  requirements.txt  test_bge_local.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  chat.py  chat_session.py  document.py  knowledge.py  system.py
backend/app/core/: __init__.py  cache.py  container.py  document_loader.py  embeddings.py  logging.py  rag_chain.py  security.py  text_splitter.py  vectorstore.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  chat.py  database.py  schemas.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: __init__.py  chat_service.py  document_service.py
backend/scripts/: run.sh  setup.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_batch_upload.py  test_chat_session.py  test_config.py  test_database.py  test_document_loader.py  test_llm_cache.py  test_redis_cache.py  test_schemas.py  test_text_splitter.py
docs/: PRD.md  README.md  技术方案.md  按知识库检索开发方案.md  日志管理方案.md  智能文档问答系统_完整项目实战.md  系统架构.md  聊天页面知识库切换功能需求文档.md  项目开发总结.md
docs/requirements/: 01_知识库检索.md  02_知识库切换.md  03_日志管理.md  04_用户认证.md  05_对话历史管理.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/api/: auth.ts  chat-session.ts  chat.ts  document.ts  index.ts  knowledge.ts  request.test.ts  request.ts
(+14 files in other folders)
